fixed spacing and changed countries with usa state

--- a/css/internet.css
+++ b/css/internet.css
@@ -191,7 +191,7 @@
 	padding: 2rem;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 	align-items: flex-start;
 	box-sizing: border-box;
 }
